# pic_master

./: .gitignore  README.md  TODO.md  cli.py  example.py  features.todo.md  media.py  migrate_file_identity.py  pyproject.toml  recover_by_path.py  recover_manual_db.py  requirements-age-estimator.txt  requirements.txt  setup.py
media_manager/: __init__.py  age_estimator.py  age_estimator_worker.py  body_index.py  broken_finder.py  category_resolver.py  database.py  detector.py  error_log.py  exif_reader.py  face_detector.py  fast_scan.py  formats.py  frames.py  hash_estimator.py  hasher.py  ignore.py  indexer.py  manual_db.py  media.py  media_manager.py  models.py  requirements-age-estimator.txt  scanner.py  similarity.py  swipe_support.py  web.py
media_manager/static/: app.js  style.css  swipe-core.js
media_manager/templates/: _macros.html  base.html  body_similar.html  categories.html  category_detail.html  duplicates.html  faces.html  gallery.html  person.html  photo.html  search.html  set_detail.html  sets.html  similar.html  studios.html  tags.html
